Added all chess pieces

--- a/index.html
+++ b/index.html
@@ -7,55 +7,86 @@
     <body>
         <div class = "chessBoard">
             <!-- 8th Rank -->
-            <div class = "square white"></div>
-            <div class = "square black"></div>
-            <div class = "square white"></div>
-            <div class = "square black"></div>
-            <div class = "square white"></div>
-            <div class = "square black"></div>
-            <div class = "square white"></div>
+            <div class = "square white">
+                <div class = "piece rook" color = "black">
+                    <img src = "pieces/black/black rook.png">
+                </div>
+            </div>
+            <div class = "square black">
+                <div class = "piece knight" color = "black">
+                    <img src = "pieces/black/black knight.png">
+                </div>
+            </div>
+            <div class = "square white">
+                <div class = "piece bishop" color = "black">
+                    <img src = "pieces/black/black bishop.png">
+                </div>
+            </div>
+            <div class = "square black">
+                <div class = "piece queen" color = "black">
+                    <img src = "pieces/black/black queen.png">
+                </div>
+            </div>
+            <div class = "square white">
+                <div class = "piece king" color = "black">
+                    <img src = "pieces/black/black king.png">
+                </div>
+            </div>
+            <div class = "square black">
+                <div class = "piece bishop" color = "black">
+                    <img src = "pieces/black/black bishop.png">
+                </div>
+            </div>
+            <div class = "square white">
+                <div class = "piece knight" color = "black">
+                    <img src = "pieces/black/black knight.png">
+                </div>
+            </div>
             <div class = "square black">
                 <div class = "coordinate rank whiteText">8</div>
+                <div class = "piece rook" color = "black">
+                    <img src = "pieces/black/black rook.png">
+                </div>
             </div>
             <!-- 7th Rank -->
             <div class = "square black">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
             <div class = "square white">
                 <div class = "coordinate rank blackText">7</div>
-                <div class = "piece rook" color = "black">
+                <div class = "piece pawn" color = "black">
                     <img src = "pieces/black/black pawn.png">
                 </div>
             </div>
@@ -105,43 +136,43 @@
             </div>
             <!-- 2nd Rank -->
             <div class = "square white">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square black">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square white">
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
             <div class = "square black">
                 <div class = "coordinate rank whiteText">2</div>
-                <div class = "piece rook" color = "white">
+                <div class = "piece pawn" color = "white">
                     <img src = "pieces/white/white pawn.png">
                 </div>
             </div>
@@ -154,25 +185,25 @@
             </div>
             <div class = "square white">
                 <div class = "coordinate blackText">b</div>
-                <div class = "piece rook" color = "white">
+                <div class = "piece knight" color = "white">
                     <img src = "pieces/white/white knight.png">
                 </div>
             </div>
             <div class = "square black">
                 <div class = "coordinate whiteText">c</div>
-                <div class = "piece queen" color = "white">
-                    <img src = "pieces/white/white knight.png">
+                <div class = "piece bishop" color = "white">
+                    <img src = "pieces/white/white bishop.png">
                 </div>
             </div>
             <div class = "square white">
                 <div class = "coordinate blackText">d</div>
-                <div class = "piece king" color = "white">
+                <div class = "piece queen" color = "white">
                     <img src = "pieces/white/white queen.png">
                 </div>
             </div>
             <div class = "square black">
                 <div class = "coordinate whiteText">e</div>
-                <div class = "piece queen" color = "white">
+                <div class = "piece king" color = "white">
                     <img src = "pieces/white/white king.png">
                 </div>
             </div>
