--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Chess Board</title>
         <link rel = "stylesheet" href = "styles.css">
+        <script src = "main.js" defer></script>
     </head>
     <body>
         <div class = "chessBoard">
