--- a/version 2.0/index.html
+++ b/version 2.0/index.html
@@ -6,9 +6,7 @@
         <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
-        <div id = "gameboard">
-
-        </div>
+        <div id = "gameboard"></div>
 
         <p>It is <span id = "player"></span> go. </p>
         <p id = "info-display"></p>
