--- a/version 2.0/index.html
+++ b/version 2.0/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang = "en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Chess</title>
-        <link rel = "stylesheet" href = "styles.css">
-    </head>
-    <body>
-        <div id = "gameboard"></div>
+<head>
+    <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chess and Variants</title>
+    <link href="styles/index.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <div id = "top" class = "container-fluid my-4">
+        <nav class = "navbar navbar-expand-lg fixed-top">
+            <div class = "container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo/navLogo.png" alt="Chess Logo">
+                    <span>Chess</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button> 
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <!-- BSF 7: ms-auto means auto-margin and push all the items into the right side of the navbar-->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li> <!-- BSF 8: aria-current and active highlight the current page link -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="chessWiki.html">Learn Chess</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="formFeedback.html">Feedback Form</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <!-- Add dropdown-menu-end to align the dropdown menu properly -->
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                More
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">About Me</a></li>
+                                <li><a class="dropdown-item" href="#">My Other Projects</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>                             
+            </div>
+        </nav>
+    </div>
 
-        <p>It is <span id = "player"></span>'s go. </p>
-        <p id = "info-display"></p>
-        
-        <script src = "pieces.js"></script>
-        <script src = "app.js"></script>
-    </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
