--- a/version 2.0/index.html
+++ b/version 2.0/index.html
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav ms-auto">
                         <!-- BSF 7: ms-auto means auto-margin and push all the items into the right side of the navbar-->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li> <!-- BSF 8: aria-current and active highlight the current page link -->
                         <li class="nav-item">
                             <a class="nav-link" href="chessWiki.html">Learn Chess</a>
@@ -45,7 +45,36 @@
             </div>
         </nav>
     </div>
+    <!-- Different modes of chess -->
+    <div class = "container-fluid">
+        <div class = "mode-container">
+            <div class = "row">
 
+                <div class = "col-lg-4 col-sm-6 p-3">
+                    <div class = "card">
+                        <div class = "photo-container">
+                            <img src = "images/card/modern chess.jpeg" alt = "modern chess">
+                        </div>
+                        <div class = "title-container">
+                            <h1>Modern Chess</h1>
+                        </div>
+                        <div class = "text-container">
+                            <p>Learn how to play the modern version before trying the other Variants.</p>
+                        </div>
+                        <a href = "modernChess.html" class = "btn btn-primary">Play</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="mt-auto py-3 bg-dark text-center">
+        <p class="m-0 py-0 px-4">
+          2025 Chess. Created by Tan Guan Ying
+        </p>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
