--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -9,9 +9,13 @@
         <link rel = "stylesheet" href = "styles/footer.css">
     </head>
     <body>
-        <div id = "rightRectangle">
-            <div class = "selectedPlayer"></div>
-            <div class = "listPlayers"></div>
+        <div id="rightRectangle">
+            <div class="rightRectangleHeader">
+                <h1>Play Bots</h1>
+            </div>
+            <div id="selectedPlayer"></div>
+            <div id="imagePlayers"></div>
+            <div id="listPlayers"></div>
         </div>
         
         <div class = "gameboard-container">
@@ -19,8 +23,9 @@
         </div>
         <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
         <p id = "info-display"></p>
-        
-        <script src = "pieces.js"></script>
-        <script src = "app.js"></script>
+
+        <script src = "js/pieces.js"></script>
+        <script src = "js/app.js"></script>
+        <script src = "js/character.js"></script>
     </body>
 </html>
