--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -17,13 +17,13 @@
             <div id="imagePlayers"></div>
             <div id="listPlayers"></div>
         </div>
-        
-        <div class = "gameboard-container">
-            <div id = "gameboard"></div>
+        <div class = "game-section">
+            <div class = "gameboard-container">
+                <div id = "gameboard"></div>
+            </div>
+            <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
+            <p id = "info-display"></p>
         </div>
-        <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
-        <p id = "info-display"></p>
-
         <script src = "js/pieces.js"></script>
         <script src = "js/app.js"></script>
         <script src = "js/character.js"></script>
