--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -16,13 +16,16 @@
             <div id="selectedPlayer"></div>
             <div id="imagePlayers"></div>
             <div id="listPlayers"></div>
+            <div id="playButtonContainer">
+                <button id="playButton">Play</button>
+            </div>
         </div>
         <div class = "game-section">
             <div class = "gameboard-container">
                 <div id = "gameboard"></div>
             </div>
             <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
-            <p id = "info-display"></p>
+            <!-- <p id = "info-display"></p> -->
         </div>
         <script src = "js/pieces.js"></script>
         <script src = "js/app.js"></script>
