--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -25,7 +25,7 @@
                 <div id = "gameboard"></div>
             </div>
             <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
-            <!-- <p id = "info-display"></p> -->
+            <p id = "info-display"></p> 
         </div>
         <script src = "js/pieces.js"></script>
         <script src = "js/app.js"></script>
