Add character selection

--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -13,6 +13,15 @@
             <div class="rightRectangleHeader">
                 <h1>Play Bots</h1>
             </div>
+
+            <section id = "characterSelect">
+                <div id = "characterSelectContainer">
+                    <div id="imagePlayers"></div>  <!--img-->
+                    <div id="selectedPlayer"></div> <!--name-->
+                    <div id = "textFlavour"></div> <!--flavortext-->
+                </div>
+            </section>
+
             <div id="selectedPlayer"></div>
             <div id="imagePlayers"></div>
             <div id="listPlayers"></div>
