Bug fixes and added dialouges

--- a/version 2.0/modernChess.html
+++ b/version 2.0/modernChess.html
@@ -38,6 +38,7 @@
         </div>
         <script src = "js/pieces.js"></script>
         <script src = "js/app.js"></script>
+        <script src = "js/characterDialogues.js"></script>
         <script src = "js/character.js"></script>
     </body>
 </html>
