I cant figure out how to promote

--- a/version 2.0/index.html
+++ b/version 2.0/index.html
@@ -51,7 +51,6 @@
     <div class = "container-fluid">
         <div class = "mode-container">
             <div class = "row">
-
                 <div class = "col-lg-4 col-sm-6 p-3">
                     <div class = "card">
                         <div class = "photo-container">
@@ -66,6 +65,35 @@
                         <a href = "modernChess.html" class = "btn btn-primary">Play</a>
                     </div>
                 </div>
+                <div class = "col-lg-4 col-sm-6 p-3">
+                    <div class = "card">
+                        <div class = "photo-container">
+                            <img src = "images/card/island chess.jpeg" alt = "island chess">
+                        </div>
+                        <div class = "title-container">
+                            <h1>Island Chess</h1>
+                        </div>
+                        <div class = "text-container">
+                            <p>Now with a bigger chessboard, sea terrains and new chess pieces.</p>
+                        </div>
+                        <a href = "islandChess.html" class = "btn btn-primary">Play</a>
+                    </div>
+                </div>
+                <div class = "col-lg-4 col-sm-6 p-3">
+                    <div class = "card">
+                        <div class = "photo-container">
+                            <img src = "images/card/fantasy chess.jpeg" alt = "fantasy chess">
+                        </div>
+                        <div class = "title-container">
+                            <h1>Fantasy Chess</h1>
+                        </div>
+                        <div class = "text-container">
+                            <p>Immerse yourself in a simple power hungry war simulation. Not much chess experience needed.</p>
+                        </div>
+                        <a href = "fantasyChess.html" class = "btn btn-primary">Play</a>
+                    </div>
+                </div>
+            </div>
 
             </div>
         </div>
