--- a/version 2.0/islandChess.html
+++ b/version 2.0/islandChess.html
@@ -39,8 +39,8 @@
             <p class = "playerGoStatus">It is <span id = "player"></span>'s go. </p>
             <p id = "info-display"></p> 
         </div>
-        <script src = "js/pieces.js"></script>
-        <script src = "js/app.js"></script>
-        <script src = "js/character.js"></script>
+        <script src = "js/islandChessJs/piecesIsland.js"></script>
+        <script src = "js/islandChessJs/appIsland.js"></script>
+        <script src = "js/islandChessJs/characterIsland.js"></script>
     </body>
 </html>
